k8s/base/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: dashboard
  template:
    metadata:
      labels:
        app.kubernetes.io/name: dashboard
    spec:
      containers:
        - name: dashboard
          image: registry.univ.leitwert.net/lagebild/t4-frontend/frontend
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /api/healthz
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
            # TODO: Enable readiness probe
#          readinessProbe:
#            httpGet:
#              path: /api/health
#              port: 3000
#            initialDelaySeconds: 10
#            periodSeconds: 5
      imagePullSecrets:
        - name: leitwert-container-registry
