k8s/base/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: dashboard
