k8s/base/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: placeholder.local
      http:
        paths:
          - path: /maptiler
            pathType: Prefix
            backend:
              service:
                name: maptiler
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dashboard
                port:
                  name: http
